orgs/claim-core/force-app/main/default/objects/Case/fields/Sentiment_Label__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Label__c</fullName>
    <label>Sentiment Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Frustrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>