orgs/claim-core/force-app/main/default/objects/Case/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <label>Sentiment Score</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>