orgs/claim-core/force-app/main/default/objects/Case/fields/Verification_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Verification_Expiry__c</fullName>
    <label>Verification Expiry</label>
    <type>DateTime</type>
</CustomField>